<resources>
    <string name="app_name">Фильмотека</string>
    <string name="first_button">Случайный фильм</string>
    <string name="about">О программе</string>
    <string name="help">Помощь</string>
    <string name="films">Фильмы</string>
    <string name="tv">Сериалы</string>
    <string name="people">Люди</string>
    <string name="search">Поиск</string>
    <string name="logo_image">logo image</string>
    <string name="login">Вход в систему</string>
    <string name="login_string">Login</string>
    <string name="password_string">Пароль</string>
    <string name="login_btn">Вход</string>
    <string name="guest_btn">Продолжить как гость</string>
    <string name="rated_moves">Популярные фильмы</string>
    <string name="rated_tv_shows">Популярные ТВ-шоу</string>
    <string name="rated_tv_episodes">Популярные серии ТВ-шоу</string>
    <string name="movie_poster">movie poster</string>
    <string name="repeat">Повтор</string>
    <string name="movie_detail_fragment">Информация о фильме</string>
    <string name="connection_change_notify">Изменился вид связи: %s</string>
    <string name="login_error">Ошибка входа в систему</string>
    <string name="token_error">Ошибка получения токена</string>
    <string name="binding_not_init">Binding не инициализирован</string>
    <string name="welcome_screen">Добро пожаловать</string>
    <string name="load_list_movies_error">Ошибка загрузки списка фильмов</string>
    <string name="load_list_tvshows_error">Ошибка загрузки списка ТВ</string>
    <string name="load_settings_error">Ошибка загрузки настроек</string>
    <string name="popular_movies_title">Популярные фильмы</string>
    <string name="popular_tvshows_title">Популярные сериалы</string>
    <string name="top_rated_movies_title">Лучшие фильмы</string>
    <string name="setting_content_18">Показывать контент 18+</string>
    <string name="settings_title">Настройки</string>
    <string name="setting_tag_adult">adult</string>
    <string name="loading_settings">Загрузка настроек</string>
    <string name="comment">Коментарий</string>
    <string name="load_api_complete">Настройки API загружены</string>
    <string name="load_countries_complete">Страны загружены</string>
    <string name="load_jobs_complete">Список профессий загружен</string>
    <string name="load_languages_complete">Языковые настройки загружены</string>
    <string name="load_time_zones_complete">Настройки часовых поясов выполнены</string>
    <string name="load_settings_complete">Загрузка настроек завершена</string>
    <string name="phonebook">Телефонная книга</string>
    <string name="permission_contacts_dialog_title">Доступ к контактам</string>
    <string name="permission_contacts_dialog_message">Для работы с телефонной книгой необходимо ваше разрешение на доступ.</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="backdrop_image">backdrop image</string>
    <string name="language">Язык</string>
    <string name="region">Регион</string>
    <string name="map">Карта</string>
    <string name="address_find">Поиск по адресу…</string>
    <string name="permission_location_dialog_title">Доступ к локации</string>
    <string name="permission_location_dialog_message">Для работы с картами приложению необходимо предоставить доступ к локации устройства.</string>
    <string name="not_enabled_gps">Не включена GPS-локализация!</string>
    <string name="near_address">Ближайший найденный адрес по координатам - %s</string>
    <string name="movies">Фильмы</string>
    <string name="tv_detail_fragment">Информация о сериале</string>
    <string name="comment_title">Оставить комментарий</string>
    <string name="count_episodes_text">Всего эпизодов: %d</string>
    <string name="count_seasons_text">%d сезонов</string>
    <string name="time_string_pattern">%d ч. %d мин.</string>
    <string name="list_actors">Список актеров</string>
    <string name="list_employees">Съемочная группа</string>
    <string name="photo">Фотография</string>

    <string-array name="setting_tags">
        <item>adult</item>
        <item>language</item>
    </string-array>
</resources>