<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_dim">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/setting_adult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:tag="@string/setting_tag_adult"
            android:text="@string/setting_content_18"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintBottom_toTopOf="@id/setting_language"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:gravity="center"
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/setting_item_height"
            android:text="@string/language"
            android:layout_marginEnd="@dimen/dim_24"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toTopOf="@id/setting_language"
            app:layout_constraintBottom_toBottomOf="@id/setting_language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/setting_language" />

        <Spinner
            android:id="@+id/setting_language"
            android:layout_width="0dp"
            android:layout_height="@dimen/setting_item_height"
            app:layout_constraintTop_toBottomOf="@id/setting_adult"
            app:layout_constraintStart_toEndOf="@id/tv_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/setting_time_zone" />

        <TextView
            android:gravity="center"
            android:id="@+id/tv_region"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/setting_item_height"
            android:text="@string/region"
            android:layout_marginEnd="@dimen/dim_24"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toTopOf="@id/setting_time_zone"
            app:layout_constraintBottom_toBottomOf="@id/setting_time_zone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/setting_time_zone" />

        <Spinner
            android:id="@+id/setting_time_zone"
            android:layout_width="0dp"
            android:layout_height="@dimen/setting_item_height"
            app:layout_constraintTop_toBottomOf="@id/setting_language"
            app:layout_constraintStart_toEndOf="@id/tv_region"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>